tests/rosetta/out/C/bin-given-limits.error
cc: exit status 1
/tmp/bin-given-limits.c: In function ‘printBins’:
/tmp/bin-given-limits.c:106:34: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  106 |   printf("%s\n", "           < " + padLeft(limits.data[0], 3) + " = " +
      |                  ~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |                 |
      |                  char *            char *
/tmp/bin-given-limits.c:110:26: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  110 |     printf("%s\n", ">= " + padLeft(limits.data[i - 1], 3) + " and < " +
      |                    ~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                    |       |
      |                    char *  char *
/tmp/bin-given-limits.c:115:24: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  115 |   printf("%s\n", ">= " + padLeft(limits.data[n - 1], 3) + "           = " +
      |                  ~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |       |
      |                  char *  char *
