tests/rosetta/out/C/bin-given-limits.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int getBins(list_int limits, list_int data) {
  int n = limits.len;
  list_int bins = list_int_create(0);
  int i = 0;
  while (i < n + 1) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = 0;
    list_int tmp2 = concat_list_int(bins, tmp1);
    bins = tmp2;
    i = i + 1;
  }
  int j = 0;
  while (j < data.len) {
    int d = data.data[j];
    int index = 0;
    while (index < limits.len) {
      if (d < limits.data[index]) {
        break;
      }
      if (d == limits.data[index]) {
        index = index + 1;
        break;
      }
      index = index + 1;
    }
    bins.data[index] = bins.data[index] + 1;
    j = j + 1;
  }
  return bins;
}

char *padLeft(int n, int width) {
  char *tmp3 = _str(n);
  char *s = tmp3;
  int pad = width - strlen(s);
  char *out = "";
  int i = 0;
  while (i < pad) {
    char *tmp4 = concat_string(out, " ");
    out = tmp4;
    i = i + 1;
  }
  char *tmp5 = concat_string(out, s);
  return tmp5;
}

int printBins(list_int limits, list_int bins) {
  int n = limits.len;
  printf("%s\n", "           < " + padLeft(limits.data[0], 3) + " = " +
                     padLeft(bins.data[0], 2));
  int i = 1;
  while (i < n) {
    printf("%s\n", ">= " + padLeft(limits.data[i - 1], 3) + " and < " +
                       padLeft(limits.data[i], 3) + " = " +
                       padLeft(bins.data[i], 2));
    i = i + 1;
  }
  printf("%s\n", ">= " + padLeft(limits.data[n - 1], 3) + "           = " +
                     padLeft(bins.data[n], 2));
  printf("\n");
}

int mochi_main() {
  list_int tmp6 = list_int_create(6);
  tmp6.data[0] = 23;
  tmp6.data[1] = 37;
  tmp6.data[2] = 43;
  tmp6.data[3] = 53;
  tmp6.data[4] = 67;
  tmp6.data[5] = 83;
  list_int tmp7 = list_int_create(10);
  tmp7.data[0] = 14;
  tmp7.data[1] = 18;
  tmp7.data[2] = 249;
  tmp7.data[3] = 312;
  tmp7.data[4] = 389;
  tmp7.data[5] = 392;
  tmp7.data[6] = 513;
  tmp7.data[7] = 591;
  tmp7.data[8] = 634;
  tmp7.data[9] = 720;
  list_int limitsList_data[] = {tmp6, tmp7};
  list_list_int limitsList = {2, limitsList_data};
  list_int tmp8 = list_int_create(50);
  tmp8.data[0] = 95;
  tmp8.data[1] = 21;
  tmp8.data[2] = 94;
  tmp8.data[3] = 12;
  tmp8.data[4] = 99;
  tmp8.data[5] = 4;
  tmp8.data[6] = 70;
  tmp8.data[7] = 75;
  tmp8.data[8] = 83;
  tmp8.data[9] = 93;
  tmp8.data[10] = 52;
  tmp8.data[11] = 80;
  tmp8.data[12] = 57;
  tmp8.data[13] = 5;
  tmp8.data[14] = 53;
  tmp8.data[15] = 86;
  tmp8.data[16] = 65;
  tmp8.data[17] = 17;
  tmp8.data[18] = 92;
  tmp8.data[19] = 83;
  tmp8.data[20] = 71;
  tmp8.data[21] = 61;
  tmp8.data[22] = 54;
  tmp8.data[23] = 58;
  tmp8.data[24] = 47;
  tmp8.data[25] = 16;
  tmp8.data[26] = 8;
  tmp8.data[27] = 9;
  tmp8.data[28] = 32;
  tmp8.data[29] = 84;
  tmp8.data[30] = 7;
  tmp8.data[31] = 87;
  tmp8.data[32] = 46;
  tmp8.data[33] = 19;
  tmp8.data[34] = 30;
  tmp8.data[35] = 37;
  tmp8.data[36] = 96;
  tmp8.data[37] = 6;
  tmp8.data[38] = 98;
  tmp8.data[39] = 40;
  tmp8.data[40] = 79;
  tmp8.data[41] = 97;
  tmp8.data[42] = 45;
  tmp8.data[43] = 64;
  tmp8.data[44] = 60;
  tmp8.data[45] = 29;
  tmp8.data[46] = 49;
  tmp8.data[47] = 36;
  tmp8.data[48] = 43;
  tmp8.data[49] = 55;
  list_int tmp9 = list_int_create(200);
  tmp9.data[0] = 445;
  tmp9.data[1] = 814;
  tmp9.data[2] = 519;
  tmp9.data[3] = 697;
  tmp9.data[4] = 700;
  tmp9.data[5] = 130;
  tmp9.data[6] = 255;
  tmp9.data[7] = 889;
  tmp9.data[8] = 481;
  tmp9.data[9] = 122;
  tmp9.data[10] = 932;
  tmp9.data[11] = 77;
  tmp9.data[12] = 323;
  tmp9.data[13] = 525;
  tmp9.data[14] = 570;
  tmp9.data[15] = 219;
  tmp9.data[16] = 367;
  tmp9.data[17] = 523;
  tmp9.data[18] = 442;
  tmp9.data[19] = 933;
  tmp9.data[20] = 416;
  tmp9.data[21] = 589;
  tmp9.data[22] = 930;
  tmp9.data[23] = 373;
  tmp9.data[24] = 202;
  tmp9.data[25] = 253;
  tmp9.data[26] = 775;
  tmp9.data[27] = 47;
  tmp9.data[28] = 731;
  tmp9.data[29] = 685;
  tmp9.data[30] = 293;
  tmp9.data[31] = 126;
  tmp9.data[32] = 133;
  tmp9.data[33] = 450;
  tmp9.data[34] = 545;
  tmp9.data[35] = 100;
  tmp9.data[36] = 741;
  tmp9.data[37] = 583;
  tmp9.data[38] = 763;
  tmp9.data[39] = 306;
  tmp9.data[40] = 655;
  tmp9.data[41] = 267;
  tmp9.data[42] = 248;
  tmp9.data[43] = 477;
  tmp9.data[44] = 549;
  tmp9.data[45] = 238;
  tmp9.data[46] = 62;
  tmp9.data[47] = 678;
  tmp9.data[48] = 98;
  tmp9.data[49] = 534;
  tmp9.data[50] = 622;
  tmp9.data[51] = 907;
  tmp9.data[52] = 406;
  tmp9.data[53] = 714;
  tmp9.data[54] = 184;
  tmp9.data[55] = 391;
  tmp9.data[56] = 913;
  tmp9.data[57] = 42;
  tmp9.data[58] = 560;
  tmp9.data[59] = 247;
  tmp9.data[60] = 346;
  tmp9.data[61] = 860;
  tmp9.data[62] = 56;
  tmp9.data[63] = 138;
  tmp9.data[64] = 546;
  tmp9.data[65] = 38;
  tmp9.data[66] = 985;
  tmp9.data[67] = 948;
  tmp9.data[68] = 58;
  tmp9.data[69] = 213;
  tmp9.data[70] = 799;
  tmp9.data[71] = 319;
  tmp9.data[72] = 390;
  tmp9.data[73] = 634;
  tmp9.data[74] = 458;
  tmp9.data[75] = 945;
  tmp9.data[76] = 733;
  tmp9.data[77] = 507;
  tmp9.data[78] = 916;
  tmp9.data[79] = 123;
  tmp9.data[80] = 345;
  tmp9.data[81] = 110;
  tmp9.data[82] = 720;
  tmp9.data[83] = 917;
  tmp9.data[84] = 313;
  tmp9.data[85] = 845;
  tmp9.data[86] = 426;
  tmp9.data[87] = 9;
  tmp9.data[88] = 457;
  tmp9.data[89] = 628;
  tmp9.data[90] = 410;
  tmp9.data[91] = 723;
  tmp9.data[92] = 354;
  tmp9.data[93] = 895;
  tmp9.data[94] = 881;
  tmp9.data[95] = 953;
  tmp9.data[96] = 677;
  tmp9.data[97] = 137;
  tmp9.data[98] = 397;
  tmp9.data[99] = 97;
  tmp9.data[100] = 854;
  tmp9.data[101] = 740;
  tmp9.data[102] = 83;
  tmp9.data[103] = 216;
  tmp9.data[104] = 421;
  tmp9.data[105] = 94;
  tmp9.data[106] = 517;
  tmp9.data[107] = 479;
  tmp9.data[108] = 292;
  tmp9.data[109] = 963;
  tmp9.data[110] = 376;
  tmp9.data[111] = 981;
  tmp9.data[112] = 480;
  tmp9.data[113] = 39;
  tmp9.data[114] = 257;
  tmp9.data[115] = 272;
  tmp9.data[116] = 157;
  tmp9.data[117] = 5;
  tmp9.data[118] = 316;
  tmp9.data[119] = 395;
  tmp9.data[120] = 787;
  tmp9.data[121] = 942;
  tmp9.data[122] = 456;
  tmp9.data[123] = 242;
  tmp9.data[124] = 759;
  tmp9.data[125] = 898;
  tmp9.data[126] = 576;
  tmp9.data[127] = 67;
  tmp9.data[128] = 298;
  tmp9.data[129] = 425;
  tmp9.data[130] = 894;
  tmp9.data[131] = 435;
  tmp9.data[132] = 831;
  tmp9.data[133] = 241;
  tmp9.data[134] = 989;
  tmp9.data[135] = 614;
  tmp9.data[136] = 987;
  tmp9.data[137] = 770;
  tmp9.data[138] = 384;
  tmp9.data[139] = 692;
  tmp9.data[140] = 698;
  tmp9.data[141] = 765;
  tmp9.data[142] = 331;
  tmp9.data[143] = 487;
  tmp9.data[144] = 251;
  tmp9.data[145] = 600;
  tmp9.data[146] = 879;
  tmp9.data[147] = 342;
  tmp9.data[148] = 982;
  tmp9.data[149] = 527;
  tmp9.data[150] = 736;
  tmp9.data[151] = 795;
  tmp9.data[152] = 585;
  tmp9.data[153] = 40;
  tmp9.data[154] = 54;
  tmp9.data[155] = 901;
  tmp9.data[156] = 408;
  tmp9.data[157] = 359;
  tmp9.data[158] = 577;
  tmp9.data[159] = 237;
  tmp9.data[160] = 605;
  tmp9.data[161] = 847;
  tmp9.data[162] = 353;
  tmp9.data[163] = 968;
  tmp9.data[164] = 832;
  tmp9.data[165] = 205;
  tmp9.data[166] = 838;
  tmp9.data[167] = 427;
  tmp9.data[168] = 876;
  tmp9.data[169] = 959;
  tmp9.data[170] = 686;
  tmp9.data[171] = 646;
  tmp9.data[172] = 835;
  tmp9.data[173] = 127;
  tmp9.data[174] = 621;
  tmp9.data[175] = 892;
  tmp9.data[176] = 443;
  tmp9.data[177] = 198;
  tmp9.data[178] = 988;
  tmp9.data[179] = 791;
  tmp9.data[180] = 466;
  tmp9.data[181] = 23;
  tmp9.data[182] = 707;
  tmp9.data[183] = 467;
  tmp9.data[184] = 33;
  tmp9.data[185] = 670;
  tmp9.data[186] = 921;
  tmp9.data[187] = 180;
  tmp9.data[188] = 991;
  tmp9.data[189] = 396;
  tmp9.data[190] = 160;
  tmp9.data[191] = 436;
  tmp9.data[192] = 717;
  tmp9.data[193] = 918;
  tmp9.data[194] = 8;
  tmp9.data[195] = 374;
  tmp9.data[196] = 101;
  tmp9.data[197] = 684;
  tmp9.data[198] = 727;
  tmp9.data[199] = 749;
  list_int dataList_data[] = {tmp8, tmp9};
  list_list_int dataList = {2, dataList_data};
  int i = 0;
  while (i < limitsList.len) {
    char *tmp10 = _str(i + 1);
    char *tmp11 = concat_string("Example ", tmp10);
    char *tmp12 = concat_string(tmp11, "\n");
    printf("%s\n", tmp12);
    list_int bins = getBins(limitsList.data[i], dataList.data[i]);
    printBins(limitsList.data[i], bins);
    i = i + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
